tests/negative/parser/missing_newline.orng
// missing_newline.orng:6:18: error: expected a semicolon or a newline here, got `let`
//     let x = 4 let y = 5
//                 ^
// 
fn main() -> Int {
    let x = 4 let y = 5
}